  to open a datafile (get this saved first if need be)
- Database browser window: close this when a database is
  selected
- GUI model windows: allow drawing of graphs relating to model
  data, even if the sample has been changed since the model
  was estimated
- Model table: make a LaTeX preview available
- Windows installation: fix typo in name of uninstaller program 
  in the Programs menu
- Windows version: bug fixes and enhancements for gretl_updater.exe,
  and add a simple logging mechanism to aid in trouble-shooting
- Windows: add the ability to print a gnuplot graph directly
- ols command: add '-q' (quiet) option to suppress printing of 
  results (and add notice of this to gretlcli.hlp)
- Consolidate "webget" code -- one version for all uses
- gtk2 version: replace "system()" calls with g_spawn()
- Add model selection statistics to output of adf command

10/06/2003 version 1.1.4
- Make auto-entry of varname for sampling with dummy smarter
- Fixes for display of data values with huge datasets
- Fix to handle "weird" cases in plotting frequency distributions
- Auto-detect gnuplot's ability to use "filledcurve" style
- Translate a few untranslated strings in gtk-1.2 version
- Graph labels: make 3 labels configurable rather than just 2
- Editing gnuplot commands: fix for accented characters
- Reading CSV files: fix bug in parser for date strings
- NLS: ensure messages printed to the console are not in utf8
- Loosen up a little on "Appending" data: allow for the situation
  where the sample range for the added data is not identical
  to the original range
- Fixes for printout of fitted, actual and residual, and for
  forecasts with standard errors, in the case of missing data
- Fix to gtk2 data spreadsheet (quell warning on appending an
  observation)
- Data spreadsheet: give a warning on close if there are unsaved
  changes
- Improvements to printing of data values in certain numerical
  ranges
- Import of CSV or plain text data: if no variable names are